# AutoTest

./: .gitignore  CMakeLists.txt  Makefile  README.md  doxygen.config  libautotest-config.cmake  supermarine_build_env.cmake
include/: CMakeLists.txt  MatcherRunner.hpp  Test.hpp  auto_test.hpp  matchers.hpp  to_string.hpp
include/auto_test/: MatcherRunner.hpp  matchers.hpp  to_string.hpp
include/auto_test/matchers/: Matcher.hpp  isEqual.hpp  isNotEqual.hpp  matchesAny.hpp  noMatch.hpp  vector.hpp
include/auto_test/matchers/vector/: SlidingWindowVectorMatcher.hpp
include/matchers/: isEqual.hpp
src/: Test.cpp  auto_test.cpp  to_string.cpp
src/auto_test/: to_string.cpp
tests/: Makefile  test_build
tests/src/: RunTests.cpp
tests/src/matches/: SlidingWindowVectorMatcherTests.cpp  matchesAnyTests.cpp  noMatchTests.cpp
